@@ -8,12 +8,15 @@ python:
   - 3.5
   
 env:
-  - DJANGO="Django==1.9"
-  - DJANGO="Django==1.8.7"
+  - DJANGO="Django==1.10.2"
+  - DJANGO="Django==1.9.10"
+  - DJANGO="Django==1.8.15"
  
 matrix:
   exclude:
-    - env: DJANGO="Django==1.9"
+    - env: DJANGO="Django==1.10.2"
+      python: 3.3
+    - env: DJANGO="Django==1.9.10"
       python: 3.3
 
 install:
